syntax = "proto3";

package order;

option go_package = "/api";

message AddOrderRequest {
    int32 user_id = 1;
    int32 order_id = 2;
    int32 expire_after = 3;
    int32 weight = 4;
    int32 price = 5;
    string packing = 6;
    bool extra = 7;
}

message AddOrderResponse {
    string message = 1;
}

message RemoveOrderRequest {
    int32 order_id = 1;
}

message RemoveOrderResponse {
    string message = 1;
}

service Order {
    rpc Create(AddOrderRequest) returns (AddOrderResponse) {}
    rpc Remove(RemoveOrderRequest) returns (RemoveOrderResponse) {}
}